feat: update snapshot
feat(links-view): add title of appointment,
feat(links-view): add share via email button,
feat(appointment-summary): make newlines in description visible,
feat(derivates): make api-media-type variable,
build(audit): fix vulnerabilities in prod,
build(version): add version env variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,12 +28,11 @@ lint:
 audit:
   image: $ARTIFACTORY_DOCKER_COMMON/node:lts
   stage: test
-  allow_failure: true
   script:
     - npm ci --cache .npm --prefer-offline
-    - npm audit --production
+    - npm audit --omit=dev
 
-e2e-prod:
+e2e:
   image:
     name: $ARTIFACTORY_DOCKER_COMMON/cypress/included:10.10.0
   needs:
