--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "terminfinder",
-  "version": "0.0.0-dev",
+  "version": "0.0.0",
   "author": "Copyright © 2022 Dataport AöR",
   "description": "Erstelle Umfragen und komme mit deinen Leuten auf einen Nenner!",
   "license": "EUPL-1.2",
   "scripts": {
-    "backend-mock": "node backend-mock/server.js",
-    "start": "npm run prebuild && ng serve",
+    "backend-mock": "cross-env node backend-mock/server.js",
+    "start": "cross-env PRODUCTION=false npm run prebuild && ng serve",
     "test": "npm run prebuild && ng serve --configuration production",
     "build-prod": "npm run prebuild && ng build --configuration production ",
     "build-test": "npm run prebuild && ng build --configuration test",
@@ -43,7 +43,7 @@
     "bootstrap": "4.6.0",
     "calendar-link": "2.4.0",
     "core-js": "3.8.3",
-    "jquery": "3.6.0",
+    "jquery": "3.6.2",
     "mobile-detect": "1.4.5",
     "moment": "2.29.4",
     "ngx-clipboard": "14.0.1",
@@ -71,6 +71,7 @@
     "btoa": "1.2.1",
     "clipboardy": "2.3.0",
     "cors": "2.7.2",
+    "cross-env": "7.0.3",
     "cypress": "10.8.0",
     "dayjs": "1.10.4",
     "eslint": "8.2.0",
@@ -83,7 +84,7 @@
     "gulp-rename": "2.0.0",
     "gulp-replace": "1.0.0",
     "http-server": "0.13.0",
-    "moment-timezone": "0.5.32",
+    "moment-timezone": "0.5.40",
     "ng-packagr": "13.3.1",
     "nodemon": "2.0.7",
     "ts-node": "9.1.1",
