--- a/package.json
+++ b/package.json
@@ -100,5 +100,10 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.48.0",
     "uuid": "13.0.0"
+  },
+  "overrides": {
+    "@angular/cli": {
+      "tar": "7.5.4"
+    }
   }
 }
